# Neon-Vision

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSetting.json  README.md  imgui.ini  vcpkg-configuration.json  vcpkg.json
docs/: appcast.xml
resources/: RCa12336  RCa17524  app.rc
src/: main.cpp
src/FontManager/: FontManager.cpp  FontManager.h
src/IGM/: ImGuiManager.cpp  ImGuiManager.h
src/PublicVariable/: Variable.cpp  Variable.h
src/UI/: MainWindow.cpp  MainWindow.h
src/UI/Component/: ColorPicker.cpp  ColorPicker.h  PointerLine.cpp  PointerLine.h  RainingKey.cpp  RainingKey.h  Wallpaper.cpp  Wallpaper.h  WindowName.cpp  WindowName.h  WindowRECT.cpp  WindowRECT.h  WindowTopMost.cpp  WindowTopMost.h
src/Utils/: AnsiToUTF8.h  ImGuiAudio.h  ImGuiImage.h  Input.h  VirtualKeyCodes.h  WindowUtils.cpp  WindowUtils.h  http.cpp  http.h
src/Window/: WindowManager.cpp  WindowManager.h
